--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bitco93 Mining</title>
     <style>
         body { 
+            /* الخلفية الزرقاء المطلوبة */
             background: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500548.png') no-repeat center center fixed; 
             background-size: cover;
             color: white; 
@@ -18,62 +19,88 @@
             overflow: hidden;
         }
 
-        /* حاوية العناصر في منتصف الشاشة */
+        /* حاوية العناصر لتكون في منتصف الشاشة تماماً */
         .main-container {
             flex: 1;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            z-index: 1;
         }
 
+        .overlay {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.3); 
+            z-index: 0;
+        }
+
+        /* عداد النقاط في المنتصف */
         .balance { 
-            font-size: 60px; 
+            font-size: 65px; 
             color: #ffd700; 
             font-weight: bold; 
-            text-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
-            margin-bottom: 10px;
+            text-shadow: 0 0 25px rgba(255, 215, 0, 0.7);
+            margin-bottom: 5px;
         }
 
+        /* شعار العملة الذهبي */
         .coin-btn { 
-            width: 240px; 
+            width: 250px; 
             cursor: pointer; 
             transition: transform 0.1s; 
-            filter: drop-shadow(0 0 15px #ffd700); 
+            filter: drop-shadow(0 0 20px #ffd700); 
             user-select: none;
+            -webkit-tap-highlight-color: transparent;
         }
         .coin-btn:active { transform: scale(0.92); }
 
         /* نظام الطاقة */
         .energy-container {
-            margin-top: 20px;
-            width: 200px;
+            margin-top: 25px;
+            width: 220px;
         }
         .energy-text {
-            font-size: 18px;
+            font-size: 20px;
             color: #ffd700;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
+            font-weight: bold;
         }
         .energy-bar-bg {
             width: 100%;
-            height: 10px;
+            height: 12px;
             background: rgba(255, 255, 255, 0.2);
-            border-radius: 5px;
+            border-radius: 10px;
             overflow: hidden;
+            border: 1px solid rgba(255, 215, 0, 0.3);
         }
         .energy-bar-fill {
             height: 100%;
-            background: #ffd700;
-            width: 100%; /* تتغير برمجياً */
-            transition: width 0.3s;
+            background: linear-gradient(90deg, #ffd700, #ffae00);
+            width: 100%;
+            transition: width 0.3s ease;
         }
 
-        .footer { position: fixed; bottom: 0; width: 100%; display: flex; justify-content: space-around; background: rgba(0, 26, 51, 0.95); padding: 15px 0; border-top: 2px solid #ffd700; }
-        .nav-btn { background: none; border: none; color: #ccc; font-size: 14px; display: flex; flex-direction: column; align-items: center; }
+        /* القائمة السفلية */
+        .footer { 
+            position: fixed; 
+            bottom: 0; 
+            width: 100%; 
+            display: flex; 
+            justify-content: space-around; 
+            background: rgba(0, 26, 51, 0.9); 
+            padding: 15px 0; 
+            border-top: 2px solid #ffd700; 
+            z-index: 10;
+        }
+        .nav-btn { background: none; border: none; color: #ccc; font-size: 14px; display: flex; flex-direction: column; align-items: center; cursor: pointer; }
         .nav-btn.active { color: #ffd700; font-weight: bold; }
     </style>
 </head>
 <body>
+
+    <div class="overlay"></div>
 
     <div class="main-container">
         <div class="balance" id="score">0</div>
@@ -96,9 +123,13 @@
     </div>
 
     <script>
+        // استرجاع البيانات المحفوظة
         let score = parseInt(localStorage.getItem('score')) || 0;
         let energy = parseInt(localStorage.getItem('energy')) || 130;
+        
         const maxEnergy = 130;
+        const totalFillTime = 360000; // 6 دقائق بالملي ثانية (6 * 60 * 1000)
+        const fillSpeed = totalFillTime / maxEnergy; // السرعة اللازمة لملء نقطة واحدة
 
         document.getElementById('score').innerText = score;
         updateEnergyUI();
@@ -111,10 +142,12 @@
                 updateEnergyUI();
                 saveData();
                 
-                // اهتزاز بسيط عند الضغط
                 if (navigator.vibrate) navigator.vibrate(40);
             } else {
-                alert("انتهت الطاقة! انتظر حتى تمتلئ.");
+                // تأثير بصري بسيط عند محاولة الضغط والطاقة صفر
+                const coin = document.getElementById('coin');
+                coin.style.filter = "grayscale(1) brightness(0.5)";
+                setTimeout(() => { coin.style.filter = "drop-shadow(0 0 20px #ffd700)"; }, 300);
             }
         }
 
@@ -129,14 +162,14 @@
             localStorage.setItem('energy', energy);
         }
 
-        // زيادة الطاقة تلقائياً (نقطة واحدة كل 3 ثوانٍ)
+        // زيادة الطاقة تلقائياً لتكتمل خلال 6 دقائق بالضبط
         setInterval(() => {
             if (energy < maxEnergy) {
                 energy++;
                 updateEnergyUI();
                 localStorage.setItem('energy', energy);
             }
-        }, 3000); 
+        }, fillSpeed); 
     </script>
 </body>
 </html>
