--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitco93 - النسخة الكاملة</title>
+    <title>Bitco93 - الكامل</title>
     <style>
         body { 
             background: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500548.png') no-repeat center center fixed; 
@@ -13,11 +13,14 @@
         .tab-content { display: none; width: 100%; flex-direction: column; align-items: center; }
         .active-tab { display: flex; }
 
-        /* الصفحة الرئيسية */
+        /* التصميم الرئيسي (مثل الصورة) */
         .balance { font-size: 65px; color: #ffd700; font-weight: bold; text-shadow: 0 0 25px rgba(255, 215, 0, 0.7); }
-        .coin-btn { width: 240px; cursor: pointer; transition: transform 0.1s; filter: drop-shadow(0 0 20px #ffd700); }
+        .coin-btn { width: 240px; cursor: pointer; transition: transform 0.1s; filter: drop-shadow(0 0 20px #ffd700); user-select: none; }
         .coin-btn:active { transform: scale(0.92); }
-        .energy-bar-bg { width: 220px; height: 12px; background: rgba(255,255,255,0.2); border-radius: 10px; margin-top: 10px; overflow: hidden; border: 1px solid #ffd700; }
+        
+        /* نظام الطاقة */
+        .energy-text { font-size: 18px; color: #ffd700; font-weight: bold; margin-top: 10px; }
+        .energy-bar-bg { width: 200px; height: 12px; background: rgba(255,255,255,0.2); border-radius: 10px; overflow: hidden; border: 1px solid #ffd700; margin: 5px auto; }
         .energy-bar-fill { height: 100%; background: #ffd700; width: 100%; transition: width 0.3s; }
 
         /* العجلة */
@@ -27,10 +30,12 @@
         }
         .pointer { position: absolute; top: -10px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 25px solid #ffd700; z-index: 10; }
 
-        /* القائمة السفلية (5 خانات) */
-        .footer { width: 100%; display: flex; justify-content: space-around; background: rgba(0, 26, 51, 0.95); padding: 12px 0; border-top: 2px solid #ffd700; }
-        .nav-btn { background: none; border: none; color: #ccc; font-size: 11px; display: flex; flex-direction: column; align-items: center; cursor: pointer; flex: 1; }
+        /* القائمة السفلية (الخانات المطلوبة بجانب بعضها) */
+        .footer { width: 100%; display: flex; justify-content: space-around; background: #001a33; padding: 10px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; }
+        .nav-btn { background: none; border: none; color: #ccc; font-size: 12px; display: flex; flex-direction: column; align-items: center; cursor: pointer; flex: 1; }
         .nav-btn.active { color: #ffd700; font-weight: bold; }
+        .nav-btn span { font-size: 20px; margin-bottom: 2px; }
+
         .card { background: rgba(0, 0, 0, 0.7); border: 1px solid #ffd700; padding: 15px; border-radius: 15px; width: 85%; margin-top: 10px; }
     </style>
 </head>
@@ -40,40 +45,39 @@
     <div id="home" class="tab-content active-tab">
         <div class="balance" id="score">0</div>
         <img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" class="coin-btn" onclick="mine()">
-        <div style="margin-top:10px;">⚡ <span id="energy-val">130</span> / 130</div>
+        <div class="energy-text">⚡ <span id="energy-val">130</span> / 130</div>
         <div class="energy-bar-bg"><div class="energy-bar-fill" id="energy-bar"></div></div>
     </div>
 
     <div id="games" class="tab-content">
         <h2 style="color:#ffd700;">🎡 عجلة الحظ</h2>
-        <p>المحاولات المتاحة: <span id="spins-left" style="color:#ffd700;">0</span></p>
+        <p>المحاولات: <span id="spins-left" style="color:#ffd700;">0</span></p>
         <div class="wheel-box"><div class="pointer"></div><div id="wheel"></div></div>
-        <button onclick="startSpin()" id="spin-btn" style="background:#ffd700; padding:10px 30px; border-radius:20px; font-weight:bold; border:none;" disabled>تدوير!</button>
+        <button onclick="startSpin()" id="spin-btn" style="background:#ffd700; padding:10px 30px; border-radius:20px; font-weight:bold; border:none;" disabled>تدوير العجلة</button>
     </div>
 
     <div id="friends" class="tab-content">
         <h2 style="color:#ffd700;">👥 الأصدقاء</h2>
         <div class="card">
-            <p>إجمالي الإحالات: <span id="ref-count">0</span></p>
-            <p style="font-size:12px;">(كل صديق = 500 عملة + 1 محاولة تدوير)</p>
-            <button onclick="addFakeRef()" style="font-size:10px; opacity:0.5;">+ إضافة صديق (تجربة)</button>
+            <p>عدد الإحالات: <span id="ref-count">0</span></p>
+            <button onclick="addFakeRef()" style="background:#ffd700; color:black; border:none; padding:10px; border-radius:5px; width:100%; font-weight:bold;">نسخ رابط الدعوة</button>
         </div>
     </div>
 
     <div id="tasks" class="tab-content">
         <h2 style="color:#ffd700;">💰 المهام</h2>
-        <div class="card"><p>قريباً: مهام يومية جديدة</p></div>
+        <div class="card"><p>اشترك في القناة واربح 1000 عملة</p></div>
     </div>
 
     <div id="wallet" class="tab-content">
         <h2 style="color:#ffd700;">👛 المحفظة</h2>
-        <div class="card"><p>الرصيد: <span id="wallet-score">0</span></p></div>
+        <div class="card"><p>رصيدك القابل للسحب: <span id="wallet-score">0</span></p></div>
     </div>
 </div>
 
 <div class="footer">
     <button class="nav-btn active" onclick="showTab('home', this)"><span>🏠</span>الرئيسية</button>
-    <button class="nav-btn" onclick="showTab('games', this)"><span>🎡</span>العب</button>
+    <button class="nav-btn" onclick="showTab('games', this)"><span>🎡</span>اللعب</button>
     <button class="nav-btn" onclick="showTab('friends', this)"><span>👥</span>الأصدقاء</button>
     <button class="nav-btn" onclick="showTab('tasks', this)"><span>💰</span>المهام</button>
     <button class="nav-btn" onclick="showTab('wallet', this)"><span>👛</span>المحفظة</button>
@@ -98,7 +102,13 @@
     }
 
     function mine() {
-        if (energy > 0) { score++; energy--; updateAll(); localStorage.setItem('score', score); localStorage.setItem('energy', energy); }
+        if (energy > 0) { 
+            score++; energy--; 
+            updateAll(); 
+            localStorage.setItem('score', score); 
+            localStorage.setItem('energy', energy);
+            if (navigator.vibrate) navigator.vibrate(40);
+        }
     }
 
     function startSpin() {
@@ -109,7 +119,7 @@
         setTimeout(() => {
             const win = rewards[Math.floor((deg % 360) / 45)];
             score += win; localStorage.setItem('score', score); updateAll();
-            alert("فزت بـ " + win);
+            alert("مبروك! فزت بـ " + win + " عملة");
         }, 4000);
     }
 
@@ -119,9 +129,11 @@
         document.getElementById(id).style.display = 'flex'; btn.classList.add('active');
     }
 
-    function addFakeRef() { refs++; localStorage.setItem('refs', refs); updateAll(); }
+    function addFakeRef() { refs++; localStorage.setItem('refs', refs); updateAll(); alert("تم نسخ الرابط!"); }
 
-    setInterval(() => { if (energy < 130) { energy++; updateAll(); localStorage.setItem('energy', energy); } }, 2769); // يمتلئ في 6 دقائق
+    // تعبئة الطاقة خلال 6 دقائق
+    setInterval(() => { if (energy < 130) { energy++; updateAll(); localStorage.setItem('energy', energy); } }, 2769);
+    
     updateAll();
 </script>
 </body>
