--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitco93 - الكامل</title>
+    <title>Bitco93 - النسخة النهائية</title>
     <style>
         body { 
             background: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500548.png') no-repeat center center fixed; 
             background-size: cover; color: white; text-align: center; font-family: Arial, sans-serif; margin: 0; height: 100vh; overflow: hidden; display: flex; flex-direction: column;
         }
-        .content-area { flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; }
+        .content-area { flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; padding-bottom: 80px; }
         .tab-content { display: none; width: 100%; flex-direction: column; align-items: center; }
         .active-tab { display: flex; }
 
-        /* التصميم الرئيسي (مثل الصورة) */
-        .balance { font-size: 65px; color: #ffd700; font-weight: bold; text-shadow: 0 0 25px rgba(255, 215, 0, 0.7); }
-        .coin-btn { width: 240px; cursor: pointer; transition: transform 0.1s; filter: drop-shadow(0 0 20px #ffd700); user-select: none; }
+        /* التصميم الرئيسي للعداد */
+        .balance { font-size: 60px; color: #ffd700; font-weight: bold; text-shadow: 0 0 25px rgba(255, 215, 0, 0.7); margin-bottom: 10px; }
+        .coin-btn { width: 220px; cursor: pointer; transition: transform 0.1s; filter: drop-shadow(0 0 20px #ffd700); user-select: none; }
         .coin-btn:active { transform: scale(0.92); }
         
         /* نظام الطاقة */
         .energy-text { font-size: 18px; color: #ffd700; font-weight: bold; margin-top: 10px; }
-        .energy-bar-bg { width: 200px; height: 12px; background: rgba(255,255,255,0.2); border-radius: 10px; overflow: hidden; border: 1px solid #ffd700; margin: 5px auto; }
+        .energy-bar-bg { width: 180px; height: 10px; background: rgba(255,255,255,0.2); border-radius: 10px; overflow: hidden; border: 1px solid #ffd700; margin: 5px auto; }
         .energy-bar-fill { height: 100%; background: #ffd700; width: 100%; transition: width 0.3s; }
 
         /* العجلة */
-        .wheel-box { position: relative; width: 260px; height: 260px; margin: 20px auto; }
+        .wheel-box { position: relative; width: 250px; height: 250px; margin: 15px auto; }
         #wheel { width: 100%; height: 100%; border-radius: 50%; border: 5px solid #ffd700; transition: transform 4s cubic-bezier(0.17, 0.67, 0.12, 0.99);
             background: conic-gradient(#ff4d4d 0deg 45deg, #ff944d 45deg 90deg, #ffd14d 90deg 135deg, #4dff88 135deg 180deg, #4dffff 180deg 225deg, #4d88ff 225deg 270deg, #944dff 270deg 315deg, #ff4dff 315deg 360deg);
         }
-        .pointer { position: absolute; top: -10px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 25px solid #ffd700; z-index: 10; }
+        .pointer { position: absolute; top: -10px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 12px solid transparent; border-right: 12px solid transparent; border-top: 22px solid #ffd700; z-index: 10; }
 
-        /* القائمة السفلية (الخانات المطلوبة بجانب بعضها) */
-        .footer { width: 100%; display: flex; justify-content: space-around; background: #001a33; padding: 10px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; }
-        .nav-btn { background: none; border: none; color: #ccc; font-size: 12px; display: flex; flex-direction: column; align-items: center; cursor: pointer; flex: 1; }
+        /* القائمة السفلية المطورة (7 خانات) */
+        .footer { width: 100%; display: flex; justify-content: space-around; background: #001a33; padding: 8px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; left: 0; z-index: 100; }
+        .nav-btn { background: none; border: none; color: #ccc; font-size: 9px; display: flex; flex-direction: column; align-items: center; cursor: pointer; flex: 1; min-width: 0; }
         .nav-btn.active { color: #ffd700; font-weight: bold; }
-        .nav-btn span { font-size: 20px; margin-bottom: 2px; }
+        .nav-btn span { font-size: 18px; margin-bottom: 2px; }
 
-        .card { background: rgba(0, 0, 0, 0.7); border: 1px solid #ffd700; padding: 15px; border-radius: 15px; width: 85%; margin-top: 10px; }
+        .card { background: rgba(0, 0, 0, 0.7); border: 1px solid #ffd700; padding: 12px; border-radius: 15px; width: 85%; margin-top: 10px; }
+        .btn-action { background: #ffd700; color: black; border: none; padding: 10px; border-radius: 8px; width: 100%; font-weight: bold; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -49,38 +50,54 @@
         <div class="energy-bar-bg"><div class="energy-bar-fill" id="energy-bar"></div></div>
     </div>
 
-    <div id="games" class="tab-content">
+    <div id="spin" class="tab-content">
         <h2 style="color:#ffd700;">🎡 عجلة الحظ</h2>
         <p>المحاولات: <span id="spins-left" style="color:#ffd700;">0</span></p>
         <div class="wheel-box"><div class="pointer"></div><div id="wheel"></div></div>
-        <button onclick="startSpin()" id="spin-btn" style="background:#ffd700; padding:10px 30px; border-radius:20px; font-weight:bold; border:none;" disabled>تدوير العجلة</button>
+        <button onclick="startSpin()" id="spin-btn" class="btn-action" style="width: auto; padding: 10px 40px;" disabled>تدوير!</button>
+    </div>
+
+    <div id="new-games" class="tab-content">
+        <h2 style="color:#ffd700;">🎮 ألعاب قادمة</h2>
+        <div class="card"><p>سيتم إضافة ألعاب مشوقة هنا قريباً لزيادة أرباحك!</p></div>
     </div>
 
     <div id="friends" class="tab-content">
         <h2 style="color:#ffd700;">👥 الأصدقاء</h2>
         <div class="card">
             <p>عدد الإحالات: <span id="ref-count">0</span></p>
-            <button onclick="addFakeRef()" style="background:#ffd700; color:black; border:none; padding:10px; border-radius:5px; width:100%; font-weight:bold;">نسخ رابط الدعوة</button>
+            <button onclick="addFakeRef()" class="btn-action">نسخ رابط الدعوة</button>
         </div>
     </div>
 
     <div id="tasks" class="tab-content">
         <h2 style="color:#ffd700;">💰 المهام</h2>
-        <div class="card"><p>اشترك في القناة واربح 1000 عملة</p></div>
+        <div class="card"><p>تفقد المهام اليومية لجمع المزيد من العملات.</p></div>
     </div>
 
     <div id="wallet" class="tab-content">
         <h2 style="color:#ffd700;">👛 المحفظة</h2>
-        <div class="card"><p>رصيدك القابل للسحب: <span id="wallet-score">0</span></p></div>
+        <div class="card"><p>الرصيد: <span id="wallet-score">0</span> عملة</p></div>
+    </div>
+
+    <div id="settings" class="tab-content">
+        <h2 style="color:#ffd700;">⚙️ الإعدادات</h2>
+        <div class="card">
+            <p>تعديل الملف الشخصي</p>
+            <p>اللغة: العربية</p>
+            <p>الدعم الفني</p>
+        </div>
     </div>
 </div>
 
 <div class="footer">
     <button class="nav-btn active" onclick="showTab('home', this)"><span>🏠</span>الرئيسية</button>
-    <button class="nav-btn" onclick="showTab('games', this)"><span>🎡</span>اللعب</button>
+    <button class="nav-btn" onclick="showTab('spin', this)"><span>🎡</span>العجلة</button>
+    <button class="nav-btn" onclick="showTab('new-games', this)"><span>🎮</span>ألعاب</button>
     <button class="nav-btn" onclick="showTab('friends', this)"><span>👥</span>الأصدقاء</button>
     <button class="nav-btn" onclick="showTab('tasks', this)"><span>💰</span>المهام</button>
     <button class="nav-btn" onclick="showTab('wallet', this)"><span>👛</span>المحفظة</button>
+    <button class="nav-btn" onclick="showTab('settings', this)"><span>⚙️</span>الإعدادات</button>
 </div>
 
 <script>
@@ -129,9 +146,8 @@
         document.getElementById(id).style.display = 'flex'; btn.classList.add('active');
     }
 
-    function addFakeRef() { refs++; localStorage.setItem('refs', refs); updateAll(); alert("تم نسخ الرابط!"); }
+    function addFakeRef() { refs++; localStorage.setItem('refs', refs); updateAll(); alert("تم نسخ الرابط ومحاكاة إحالة!"); }
 
-    // تعبئة الطاقة خلال 6 دقائق
     setInterval(() => { if (energy < 130) { energy++; updateAll(); localStorage.setItem('energy', energy); } }, 2769);
     
     updateAll();
