--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+حالياًYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -72,7 +72,8 @@
 
     <div id="tasks" class="tab-content">
         <h2>💰 المهام</h2>
-        <div class="card"><p>لا توجد مهام حالياً.</p></div>
+        <div class="card"><."القناة الرسمية لمشروع Bitco93 على تليجرام 🚀. تابعنا هنا للحصول على آخر التحديثات حول التعدين، ومواعيد سحب الأرباح، والمهام الحصرية لزيادة رصيدك. انضم الآن لتكون جزءاً من مجتمعنا قبل انطلاق العملة!"
+https://t.me/Bitco93_Bot_Channel</p></div>
     </div>
 
     <div id="wallet" class="tab-content">
